--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "socket-test",
+  "name": "google-meet",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 8098",
+    "serve": "vue-cli-service serve --port 8000",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
