--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
   },
   "dependencies": {
     "chart.js": "^3.7.1",
-    "core-js": "^3.20.0",
+    "core-js": "^3.22.3",
     "cors": "^2.8.5",
     "death": "^1.1.0",
     "dotenv": "^16.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "is-svg": "^4.3.2",
     "jquery": "^3.6.0",
     "mongodb": "^3.4.1",
     "monodb": "^1.5.1",
     "portfinder": "^1.0.28",
     "qrcode": "^1.5.0",
-    "sass": "^1.45.0",
-    "socket.io": "^4.4.0",
-    "socket.io-client": "^4.4.0",
+    "sass": "^1.51.0",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
     "ssri": "^8.0.1",
     "tiny-emitter": "^2.1.0",
-    "vue": "^3.1.0-0",
+    "vue": "^3.2.33",
     "vue-final-modal": "^3.4.3",
     "vuex": "^4.0.0"
   },
@@ -35,8 +35,8 @@
     "@vue/cli-plugin-eslint": "~5.0.4",
     "@vue/cli-service": "~5.0.4",
     "@vue/compiler-sfc": "^3.1.0-0",
-    "eslint": "^8.12.0",
-    "eslint-plugin-vue": "^8.5.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-vue": "^8.7.1",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.6.0"
   },
