--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "monodb": "^1.5.1",
     "qrcode": "^1.5.1",
     "sass": "^1.56.1",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3",
+    "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "ssri": "^9.0.1",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.45",
     "vue-final-modal": "^3.4.3",
+    "vue-split-carousel": "^2.2.3",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
