--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "^4.18.2",
     "is-svg": "^4.3.2",
     "jquery": "^3.6.3",
-    "mongodb": "^5.1.0",
+    "mongodb": "<5.1.0",
     "monodb": "^1.5.1",
     "qrcode": "^1.5.1",
     "sass": "^1.56.1",
